fix: resolve remaining GitHub Actions CI issues
- Add integration test script adjustment for vitest file detection
- Enable coverage generation for unit tests in API and Worker
- Add @vitest/coverage-v8 to worker dependencies
- Create test database setup script for CI environment
- Maintain full test execution (no skipping) as requested

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -51,8 +51,8 @@
     "lint": "eslint src",
     "start": "node dist/main.js",
     "test": "vitest run",
-    "test:unit": "vitest run src/**/*.test.ts --passWithNoTests",
-    "test:integration": "vitest run tests/integration/**/*.test.ts",
+    "test:unit": "vitest run src/**/*.test.ts --passWithNoTests --coverage",
+    "test:integration": "vitest run tests/integration/",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "type-check": "tsc --noEmit"
