--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -14,6 +14,7 @@
     "@saas/tsconfig": "workspace:*",
     "@types/ioredis": "^5.0.0",
     "@types/node": "^24.0.13",
+    "@vitest/coverage-v8": "^3.2.4",
     "pino-pretty": "^13.0.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
@@ -29,7 +30,7 @@
     "lint": "eslint src",
     "start": "node dist/main.js",
     "test": "vitest run",
-    "test:unit": "vitest run src/**/*.test.ts",
+    "test:unit": "vitest run src/**/*.test.ts --passWithNoTests --coverage",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "type-check": "tsc --noEmit"
