fix: enhances CI with segmented test jobs
Adds separate unit, integration, and E2E test jobs in CI workflow for better test isolation and result clarity. Implements artifact uploads for test results and coverage to aid analysis. Updates environment configuration with a dedicated test database URL to streamline testing. Removes redundant unified test workflow for optimization.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Core Services
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/saas_platform
+DATABASE_TEST_URL=postgresql://postgres:postgres@localhost:5432/saas_platform_test
 REDIS_URL=redis://localhost:6379
 
 # Authentication
