--- a/.env.example
+++ b/.env.example
@@ -39,9 +39,14 @@ UPLOAD_DIR=./uploads
 # OTEL_ENDPOINT=http://localhost:4317
 
 # Queue Configuration
+AI_QUEUE_KEY=bull:ai-processing:meta
 # QUEUE_PREFIX=bull                    # Prefix for Redis queue keys (default: bull)
 # AI_QUEUE_NAME=ai-processing          # Name of the AI processing queue (default: ai-processing)
 
 # Seed Data Security
 # ADMIN_PASSWORD=SecureAdm!n2025#Dev   # Admin password for database seeding (default shown for dev only)
 # DEMO_PASSWORD=DemoUser@2025!         # Demo user password for database seeding (default shown for dev only)
+
+# Testing Configuration
+VITEST_TIMEOUT=10000
+VITEST_HOOK_TIMEOUT=10000
