--- a/.github/actions/setup-node-pnpm/action.yml
+++ b/.github/actions/setup-node-pnpm/action.yml
@@ -1,6 +1,24 @@
 name: 'Setup Node.js and pnpm'
 description: 'Common setup steps for Node.js, pnpm, dependencies, and Prisma'
 
+inputs:
+  node-version:
+    description: 'Node.js version to use'
+    required: false
+    default: '22'
+  pnpm-version:
+    description: 'pnpm version to use'
+    required: false
+    default: '10'
+  install-dependencies:
+    description: 'Whether to install dependencies'
+    required: false
+    default: 'true'
+  generate-prisma:
+    description: 'Whether to generate Prisma client'
+    required: false
+    default: 'true'
+
 runs:
   using: "composite"
   steps:
@@ -10,18 +28,20 @@ runs:
     - name: Setup pnpm
       uses: pnpm/action-setup@v3
       with:
-        version: 10
+        version: ${{ inputs.pnpm-version }}
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: 22
+        node-version: ${{ inputs.node-version }}
         cache: 'pnpm'
 
     - name: Install dependencies
+      if: inputs.install-dependencies == 'true'
       run: pnpm install --frozen-lockfile
       shell: bash
 
     - name: Generate Prisma Client
+      if: inputs.generate-prisma == 'true'
       run: pnpm db:generate
       shell: bash
