feat: use latest as default versions with explicit version in test workflow
- Change default node-version from 22 to latest
- Change default pnpm-version from 10 to latest
- Update test.yml to explicitly specify node-version: 22
- Add recommendation in README to specify versions for production
- This allows new projects to use latest by default while maintaining stability in CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Setup Node.js and pnpm
         uses: ./.github/actions/setup-node-pnpm
+        with:
+          node-version: '22'
 
       - name: Run linting
         run: pnpm lint
@@ -62,6 +64,8 @@ jobs:
     steps:
       - name: Setup Node.js and pnpm
         uses: ./.github/actions/setup-node-pnpm
+        with:
+          node-version: '22'
 
       - name: Run unit tests
         run: pnpm test:unit
@@ -112,6 +116,8 @@ jobs:
     steps:
       - name: Setup Node.js and pnpm
         uses: ./.github/actions/setup-node-pnpm
+        with:
+          node-version: '22'
 
       - name: Wait for database to be ready
         run: |
@@ -175,6 +181,8 @@ jobs:
     steps:
       - name: Setup Node.js and pnpm
         uses: ./.github/actions/setup-node-pnpm
+        with:
+          node-version: '22'
 
       - name: Wait for database to be ready
         run: |
