--- a/.github/actions/setup-node-pnpm/action.yml
+++ b/.github/actions/setup-node-pnpm/action.yml
@@ -5,11 +5,11 @@ inputs:
   node-version:
     description: 'Node.js version to use'
     required: false
-    default: '22'
+    default: 'latest'
   pnpm-version:
     description: 'pnpm version to use'
     required: false
-    default: '10'
+    default: 'latest'
   install-dependencies:
     description: 'Whether to install dependencies'
     required: false
